<resources>
    <string name="app_name">calculator</string>
    <string name="buttonOneText">1</string>
    <string name="buttonFiveText">5</string>
    <string name="buttonFourText">4</string>
    <string name="buttonSixText">6</string>
    <string name="buttonTwoText">2</string>
    <string name="buttonThreeText">3</string>
    <string name="buttonSevenText">7</string>
    <string name="buttonEightText">8</string>
    <string name="buttonNineText">9</string>
    <string name="buttonNullText">0</string>
    <string name="buttonDotText">.</string>
    <string name="buttonEqualtext">=</string>
    <string name="buttonPlusText">+</string>
    <string name="buttonMinusText">-</string>
    <string name="buttonMultiplyText">*</string>
    <string name="buttonDivideText">/</string>
    <string name="backgroundImageDescription">backgroundImage</string>
</resources>